exemple.output
Terminals unused in grammar

    STRING
    FP_D


Grammar

    0 $accept: programa $end

    1 programa: function_declaration main

    2 function_declaration: function_declaration function
    3                     | %empty

    4 function: FUNC func_header ENDLINE sentences_list END ENDLINE

    5 parameters: parameters COMMA ID DDP ID
    6           | ID DDP ID
    7           | %empty

    8 func_header: ID push OP parameters CP func_return

    9 push: %empty

   10 func_return: DDP ID
   11            | %empty

   12 main: start_program sentences_list

   13 start_program: %empty

   14 sentences_list: sentences_list sentence
   15               | sentence

   16 sentence: ID ASSIGN sumrest ENDLINE
   17         | sumrest ENDLINE
   18         | RETURN sumrest ENDLINE

   19 matrix_value: FLOAT
   20             | INTEGER

   21 matrix: matrix PC row
   22       | row

   23 row: row SPACE matrix_value
   24    | matrix_value

   25 sumrest: sumrest SUMA mullist
   26        | sumrest RESTA mullist
   27        | mullist

   28 mullist: mullist MUL powlist
   29        | mullist DIV powlist
   30        | mullist MOD powlist
   31        | powlist

   32 powlist: powlist POW valor
   33        | valor

   34 valor: FLOAT
   35      | INTEGER
   36      | OP sumrest CP
   37      | ID
   38      | OC matrix CC
   39      | ID OC sumrest CC
   40      | ID OC sumrest COMMA sumrest CC
   41      | ID OP func_call CP

   42 func_call: func_call COMMA sumrest
   43          | sumrest
   44          | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ASSIGN <st.value_data.sense_valor> (258) 16
    ENDLINE <st.value_data.sense_valor> (259) 4 16 17 18
    INTEGER <st.value_data.enter> (260) 20 35
    ID <st> (261) 5 6 8 10 16 37 39 40 41
    FLOAT <st.value_data.real> (262) 19 34
    STRING <st.value_data.ident> (263)
    SUMA (264) 25
    RESTA (265) 26
    MUL (266) 28
    DIV (267) 29
    MOD (268) 30
    POW (269) 32
    OP (270) 8 36 41
    CP (271) 8 36 41
    OC (272) 38 39 40
    CC (273) 38 39 40
    PC (274) 21
    SPACE (275) 23
    COMMA (276) 5 40 42
    FP_D (277)
    END (278) 4
    DDP (279) 5 6 10
    RETURN (280) 18
    FUNC (281) 4


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    programa <st> (28)
        on left: 1
        on right: 0
    function_declaration (29)
        on left: 2 3
        on right: 1 2
    function (30)
        on left: 4
        on right: 2
    parameters <st> (31)
        on left: 5 6 7
        on right: 5 8
    func_header <st> (32)
        on left: 8
        on right: 4
    push (33)
        on left: 9
        on right: 8
    func_return <st> (34)
        on left: 10 11
        on right: 8
    main (35)
        on left: 12
        on right: 1
    start_program (36)
        on left: 13
        on right: 12
    sentences_list (37)
        on left: 14 15
        on right: 4 12 14
    sentence (38)
        on left: 16 17 18
        on right: 14 15
    matrix_value <st> (39)
        on left: 19 20
        on right: 23 24
    matrix <st> (40)
        on left: 21 22
        on right: 21 38
    row <st> (41)
        on left: 23 24
        on right: 21 22 23
    sumrest <st> (42)
        on left: 25 26 27
        on right: 16 17 18 25 26 36 39 40 42 43
    mullist <st> (43)
        on left: 28 29 30 31
        on right: 25 26 27 28 29 30
    powlist <st> (44)
        on left: 32 33
        on right: 28 29 30 31 32
    valor <st> (45)
        on left: 34 35 36 37 38 39 40 41
        on right: 32 33
    func_call <st> (46)
        on left: 42 43 44
        on right: 41 42


State 0

    0 $accept: . programa $end

    $default  reduce using rule 3 (function_declaration)

    programa              go to state 1
    function_declaration  go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    1 programa: function_declaration . main
    2 function_declaration: function_declaration . function

    FUNC  shift, and go to state 4

    $default  reduce using rule 13 (start_program)

    function       go to state 5
    main           go to state 6
    start_program  go to state 7


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    4 function: FUNC . func_header ENDLINE sentences_list END ENDLINE

    ID  shift, and go to state 8

    func_header  go to state 9


State 5

    2 function_declaration: function_declaration function .

    $default  reduce using rule 2 (function_declaration)


State 6

    1 programa: function_declaration main .

    $default  reduce using rule 1 (programa)


State 7

   12 main: start_program . sentences_list

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 11
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14
    RETURN   shift, and go to state 15

    sentences_list  go to state 16
    sentence        go to state 17
    sumrest         go to state 18
    mullist         go to state 19
    powlist         go to state 20
    valor           go to state 21


State 8

    8 func_header: ID . push OP parameters CP func_return

    $default  reduce using rule 9 (push)

    push  go to state 22


State 9

    4 function: FUNC func_header . ENDLINE sentences_list END ENDLINE

    ENDLINE  shift, and go to state 23


State 10

   35 valor: INTEGER .

    $default  reduce using rule 35 (valor)


State 11

   16 sentence: ID . ASSIGN sumrest ENDLINE
   37 valor: ID .
   39      | ID . OC sumrest CC
   40      | ID . OC sumrest COMMA sumrest CC
   41      | ID . OP func_call CP

    ASSIGN  shift, and go to state 24
    OP      shift, and go to state 25
    OC      shift, and go to state 26

    $default  reduce using rule 37 (valor)


State 12

   34 valor: FLOAT .

    $default  reduce using rule 34 (valor)


State 13

   36 valor: OP . sumrest CP

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    sumrest  go to state 28
    mullist  go to state 19
    powlist  go to state 20
    valor    go to state 21


State 14

   38 valor: OC . matrix CC

    INTEGER  shift, and go to state 29
    FLOAT    shift, and go to state 30

    matrix_value  go to state 31
    matrix        go to state 32
    row           go to state 33


State 15

   18 sentence: RETURN . sumrest ENDLINE

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    sumrest  go to state 34
    mullist  go to state 19
    powlist  go to state 20
    valor    go to state 21


State 16

   12 main: start_program sentences_list .
   14 sentences_list: sentences_list . sentence

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 11
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14
    RETURN   shift, and go to state 15

    $default  reduce using rule 12 (main)

    sentence  go to state 35
    sumrest   go to state 18
    mullist   go to state 19
    powlist   go to state 20
    valor     go to state 21


State 17

   15 sentences_list: sentence .

    $default  reduce using rule 15 (sentences_list)


State 18

   17 sentence: sumrest . ENDLINE
   25 sumrest: sumrest . SUMA mullist
   26        | sumrest . RESTA mullist

    ENDLINE  shift, and go to state 36
    SUMA     shift, and go to state 37
    RESTA    shift, and go to state 38


State 19

   27 sumrest: mullist .
   28 mullist: mullist . MUL powlist
   29        | mullist . DIV powlist
   30        | mullist . MOD powlist

    MUL  shift, and go to state 39
    DIV  shift, and go to state 40
    MOD  shift, and go to state 41

    $default  reduce using rule 27 (sumrest)


State 20

   31 mullist: powlist .
   32 powlist: powlist . POW valor

    POW  shift, and go to state 42

    $default  reduce using rule 31 (mullist)


State 21

   33 powlist: valor .

    $default  reduce using rule 33 (powlist)


State 22

    8 func_header: ID push . OP parameters CP func_return

    OP  shift, and go to state 43


State 23

    4 function: FUNC func_header ENDLINE . sentences_list END ENDLINE

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 11
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14
    RETURN   shift, and go to state 15

    sentences_list  go to state 44
    sentence        go to state 17
    sumrest         go to state 18
    mullist         go to state 19
    powlist         go to state 20
    valor           go to state 21


State 24

   16 sentence: ID ASSIGN . sumrest ENDLINE

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    sumrest  go to state 45
    mullist  go to state 19
    powlist  go to state 20
    valor    go to state 21


State 25

   41 valor: ID OP . func_call CP

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    $default  reduce using rule 44 (func_call)

    sumrest    go to state 46
    mullist    go to state 19
    powlist    go to state 20
    valor      go to state 21
    func_call  go to state 47


State 26

   39 valor: ID OC . sumrest CC
   40      | ID OC . sumrest COMMA sumrest CC

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    sumrest  go to state 48
    mullist  go to state 19
    powlist  go to state 20
    valor    go to state 21


State 27

   37 valor: ID .
   39      | ID . OC sumrest CC
   40      | ID . OC sumrest COMMA sumrest CC
   41      | ID . OP func_call CP

    OP  shift, and go to state 25
    OC  shift, and go to state 26

    $default  reduce using rule 37 (valor)


State 28

   25 sumrest: sumrest . SUMA mullist
   26        | sumrest . RESTA mullist
   36 valor: OP sumrest . CP

    SUMA   shift, and go to state 37
    RESTA  shift, and go to state 38
    CP     shift, and go to state 49


State 29

   20 matrix_value: INTEGER .

    $default  reduce using rule 20 (matrix_value)


State 30

   19 matrix_value: FLOAT .

    $default  reduce using rule 19 (matrix_value)


State 31

   24 row: matrix_value .

    $default  reduce using rule 24 (row)


State 32

   21 matrix: matrix . PC row
   38 valor: OC matrix . CC

    CC  shift, and go to state 50
    PC  shift, and go to state 51


State 33

   22 matrix: row .
   23 row: row . SPACE matrix_value

    SPACE  shift, and go to state 52

    $default  reduce using rule 22 (matrix)


State 34

   18 sentence: RETURN sumrest . ENDLINE
   25 sumrest: sumrest . SUMA mullist
   26        | sumrest . RESTA mullist

    ENDLINE  shift, and go to state 53
    SUMA     shift, and go to state 37
    RESTA    shift, and go to state 38


State 35

   14 sentences_list: sentences_list sentence .

    $default  reduce using rule 14 (sentences_list)


State 36

   17 sentence: sumrest ENDLINE .

    $default  reduce using rule 17 (sentence)


State 37

   25 sumrest: sumrest SUMA . mullist

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    mullist  go to state 54
    powlist  go to state 20
    valor    go to state 21


State 38

   26 sumrest: sumrest RESTA . mullist

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    mullist  go to state 55
    powlist  go to state 20
    valor    go to state 21


State 39

   28 mullist: mullist MUL . powlist

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    powlist  go to state 56
    valor    go to state 21


State 40

   29 mullist: mullist DIV . powlist

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    powlist  go to state 57
    valor    go to state 21


State 41

   30 mullist: mullist MOD . powlist

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    powlist  go to state 58
    valor    go to state 21


State 42

   32 powlist: powlist POW . valor

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    valor  go to state 59


State 43

    8 func_header: ID push OP . parameters CP func_return

    ID  shift, and go to state 60

    $default  reduce using rule 7 (parameters)

    parameters  go to state 61


State 44

    4 function: FUNC func_header ENDLINE sentences_list . END ENDLINE
   14 sentences_list: sentences_list . sentence

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 11
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14
    END      shift, and go to state 62
    RETURN   shift, and go to state 15

    sentence  go to state 35
    sumrest   go to state 18
    mullist   go to state 19
    powlist   go to state 20
    valor     go to state 21


State 45

   16 sentence: ID ASSIGN sumrest . ENDLINE
   25 sumrest: sumrest . SUMA mullist
   26        | sumrest . RESTA mullist

    ENDLINE  shift, and go to state 63
    SUMA     shift, and go to state 37
    RESTA    shift, and go to state 38


State 46

   25 sumrest: sumrest . SUMA mullist
   26        | sumrest . RESTA mullist
   43 func_call: sumrest .

    SUMA   shift, and go to state 37
    RESTA  shift, and go to state 38

    $default  reduce using rule 43 (func_call)


State 47

   41 valor: ID OP func_call . CP
   42 func_call: func_call . COMMA sumrest

    CP     shift, and go to state 64
    COMMA  shift, and go to state 65


State 48

   25 sumrest: sumrest . SUMA mullist
   26        | sumrest . RESTA mullist
   39 valor: ID OC sumrest . CC
   40      | ID OC sumrest . COMMA sumrest CC

    SUMA   shift, and go to state 37
    RESTA  shift, and go to state 38
    CC     shift, and go to state 66
    COMMA  shift, and go to state 67


State 49

   36 valor: OP sumrest CP .

    $default  reduce using rule 36 (valor)


State 50

   38 valor: OC matrix CC .

    $default  reduce using rule 38 (valor)


State 51

   21 matrix: matrix PC . row

    INTEGER  shift, and go to state 29
    FLOAT    shift, and go to state 30

    matrix_value  go to state 31
    row           go to state 68


State 52

   23 row: row SPACE . matrix_value

    INTEGER  shift, and go to state 29
    FLOAT    shift, and go to state 30

    matrix_value  go to state 69


State 53

   18 sentence: RETURN sumrest ENDLINE .

    $default  reduce using rule 18 (sentence)


State 54

   25 sumrest: sumrest SUMA mullist .
   28 mullist: mullist . MUL powlist
   29        | mullist . DIV powlist
   30        | mullist . MOD powlist

    MUL  shift, and go to state 39
    DIV  shift, and go to state 40
    MOD  shift, and go to state 41

    $default  reduce using rule 25 (sumrest)


State 55

   26 sumrest: sumrest RESTA mullist .
   28 mullist: mullist . MUL powlist
   29        | mullist . DIV powlist
   30        | mullist . MOD powlist

    MUL  shift, and go to state 39
    DIV  shift, and go to state 40
    MOD  shift, and go to state 41

    $default  reduce using rule 26 (sumrest)


State 56

   28 mullist: mullist MUL powlist .
   32 powlist: powlist . POW valor

    POW  shift, and go to state 42

    $default  reduce using rule 28 (mullist)


State 57

   29 mullist: mullist DIV powlist .
   32 powlist: powlist . POW valor

    POW  shift, and go to state 42

    $default  reduce using rule 29 (mullist)


State 58

   30 mullist: mullist MOD powlist .
   32 powlist: powlist . POW valor

    POW  shift, and go to state 42

    $default  reduce using rule 30 (mullist)


State 59

   32 powlist: powlist POW valor .

    $default  reduce using rule 32 (powlist)


State 60

    6 parameters: ID . DDP ID

    DDP  shift, and go to state 70


State 61

    5 parameters: parameters . COMMA ID DDP ID
    8 func_header: ID push OP parameters . CP func_return

    CP     shift, and go to state 71
    COMMA  shift, and go to state 72


State 62

    4 function: FUNC func_header ENDLINE sentences_list END . ENDLINE

    ENDLINE  shift, and go to state 73


State 63

   16 sentence: ID ASSIGN sumrest ENDLINE .

    $default  reduce using rule 16 (sentence)


State 64

   41 valor: ID OP func_call CP .

    $default  reduce using rule 41 (valor)


State 65

   42 func_call: func_call COMMA . sumrest

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    sumrest  go to state 74
    mullist  go to state 19
    powlist  go to state 20
    valor    go to state 21


State 66

   39 valor: ID OC sumrest CC .

    $default  reduce using rule 39 (valor)


State 67

   40 valor: ID OC sumrest COMMA . sumrest CC

    INTEGER  shift, and go to state 10
    ID       shift, and go to state 27
    FLOAT    shift, and go to state 12
    OP       shift, and go to state 13
    OC       shift, and go to state 14

    sumrest  go to state 75
    mullist  go to state 19
    powlist  go to state 20
    valor    go to state 21


State 68

   21 matrix: matrix PC row .
   23 row: row . SPACE matrix_value

    SPACE  shift, and go to state 52

    $default  reduce using rule 21 (matrix)


State 69

   23 row: row SPACE matrix_value .

    $default  reduce using rule 23 (row)


State 70

    6 parameters: ID DDP . ID

    ID  shift, and go to state 76


State 71

    8 func_header: ID push OP parameters CP . func_return

    DDP  shift, and go to state 77

    $default  reduce using rule 11 (func_return)

    func_return  go to state 78


State 72

    5 parameters: parameters COMMA . ID DDP ID

    ID  shift, and go to state 79


State 73

    4 function: FUNC func_header ENDLINE sentences_list END ENDLINE .

    $default  reduce using rule 4 (function)


State 74

   25 sumrest: sumrest . SUMA mullist
   26        | sumrest . RESTA mullist
   42 func_call: func_call COMMA sumrest .

    SUMA   shift, and go to state 37
    RESTA  shift, and go to state 38

    $default  reduce using rule 42 (func_call)


State 75

   25 sumrest: sumrest . SUMA mullist
   26        | sumrest . RESTA mullist
   40 valor: ID OC sumrest COMMA sumrest . CC

    SUMA   shift, and go to state 37
    RESTA  shift, and go to state 38
    CC     shift, and go to state 80


State 76

    6 parameters: ID DDP ID .

    $default  reduce using rule 6 (parameters)


State 77

   10 func_return: DDP . ID

    ID  shift, and go to state 81


State 78

    8 func_header: ID push OP parameters CP func_return .

    $default  reduce using rule 8 (func_header)


State 79

    5 parameters: parameters COMMA ID . DDP ID

    DDP  shift, and go to state 82


State 80

   40 valor: ID OC sumrest COMMA sumrest CC .

    $default  reduce using rule 40 (valor)


State 81

   10 func_return: DDP ID .

    $default  reduce using rule 10 (func_return)


State 82

    5 parameters: parameters COMMA ID DDP . ID

    ID  shift, and go to state 83


State 83

    5 parameters: parameters COMMA ID DDP ID .

    $default  reduce using rule 5 (parameters)
